--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/SystemAdminWorkArea/ManageEnterpriseAdminJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/SystemAdminWorkArea/ManageEnterpriseAdminJPanel.form
@@ -19,13 +19,9 @@
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" min="-2" pref="523" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -34,26 +30,27 @@
                                   <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="nameJTextField" min="-2" pref="134" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="networkJComboBox" pref="136" max="32767" attributes="0"/>
-                                      <Component id="enterpriseJComboBox" max="32767" attributes="0"/>
-                                      <Component id="usernameJTextField" max="32767" attributes="0"/>
-                                      <Component id="passwordJPasswordField" min="-2" pref="134" max="-2" attributes="0"/>
-                                  </Group>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="networkJComboBox" alignment="0" pref="199" max="32767" attributes="0"/>
+                                  <Component id="enterpriseJComboBox" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="usernameJTextField" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="passwordJPasswordField" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="nameJTextField" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="102" alignment="1" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <Component id="backJButton" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
                               <Component id="submitJButton" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="523" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
